# XLEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  premake5.lua
Engine/: CMakeLists.txt
Engine/Source/Editor/: CMakeLists.txt  EditorLayer.cpp  EditorLayer.h  XLengineEditorApp.cpp  imgui.ini
Engine/Source/Editor/ImGuiWrapper/: ImGuiWrapper.cpp  ImGuiWrapper.h
Engine/Source/Editor/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Engine/Source/Runtime/: CMakeLists.txt  XLEngine.h  xlpch.cpp  xlpch.h
Engine/Source/Runtime/Core/: Application.cpp  Application.h  Assert.h  Base.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.h  Timestep.h  UUID.cpp  UUID.h  Window.h
Engine/Source/Runtime/Core/AppFramework/: Application.cpp  Application.h
Engine/Source/Runtime/Core/Base/: Assert.h  Base.h  PublicSingleton.h
Engine/Source/Runtime/Core/Layer/: Layer.h
Engine/Source/Runtime/Core/Log/: Log.h
Engine/Source/Runtime/Debug/: Instrumentor.h
Engine/Source/Runtime/EcsFramework/Component/: ComponentBase.h  ComponentGroup.h
Engine/Source/Runtime/EcsFramework/Entity/: Entity.cpp  Entity.h  ScriptableEntity.cpp  ScriptableEntity.h
Engine/Source/Runtime/EcsFramework/Level/: Level.cpp  Level.h
Engine/Source/Runtime/EcsFramework/Registry/: Registry.cpp  Registry.h
Engine/Source/Runtime/EcsFramework/System/: System.h  SystemGroup.h
Engine/Source/Runtime/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Engine/Source/Runtime/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Engine/Source/Runtime/Input/: Input.h
Engine/Source/Runtime/Launch/: Launch.cpp
Engine/Source/Runtime/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h
Engine/Source/Runtime/Platform/Windows/: WindowsInput.cpp  WindowsPlatformUtils.cpp  WindowsWindow.cpp  WindowsWindow.h
Engine/Source/Runtime/Renderer/: Buffer.h  Camera.h  EditorCamera.cpp  EditorCamera.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  IndexBuffer.cpp  IndexBuffer.h  Model.cpp  Model.h  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  StaticMesh.cpp  StaticMesh.h  SubTexture2D.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Engine/Source/Runtime/Resource/AssetManager/: AssetManager.cpp  AssetManager.h
Engine/Source/Runtime/Resource/ConfigManager/: ConfigManager.cpp  ConfigManager.h
Engine/Source/Runtime/Scene/: Component.h  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.cpp  ScriptableEntity.h
(+157 files in other folders)
